# github_interest_studio

./: README.md  pyproject.toml
docs/: milestone_2026-03-02.md
src/github_interest_studio/: __init__.py  catalog.py  cli.py  exporters.py  planner.py  profiles.py  roadmaps.py  scoring.py
tests/: test_planner.py  test_scoring.py
