[project]
name = "github-interest-studio"
version = "0.1.0"
description = "CLI to generate practical GitHub project ideas from user interests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
github-interest-studio = "github_interest_studio.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
